--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,23 @@
-.introductionContainer {
-    background-color: #B4CFB0;
-}
-
 .introductionText {
     margin-left: auto;
     margin-right: auto;
-    width: 200px;
-}
-
-.socialsContainer {
-    background-color: #789395;
-    padding: 0.8125rem;
+    width: 300px;
+    font-weight: 500;
+    background-color: #768AA5;
     color: white;
 }
 
 .bg-body-tertiary {
-    background-color: #94B49F !important;
+    background-color: #768AA5 !important;
 }
+
+/* #93B0D0  */
 
 .navbar {
     --bs-emphasis-color-rgb: 255,255,255;
 }
+
+.link {
+    font-weight: 500;
+    color: black;
+  }
