pages linked together

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
     font-weight: 500;
     background-color: #768AA5;
     color: white;
+    /* box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px; */
 }
 
 .bg-body-tertiary {
