--- a/styles.css
+++ b/styles.css
@@ -15,25 +15,35 @@
 /* #93B0D0  */
 
 .navbar {
-    --bs-emphasis-color-rgb: 255,255,255;
+    --bs-emphasis-color-rgb: 255, 255, 255;
 }
 
 .link {
     font-weight: 500;
     color: black;
-  }
+}
 
 
-  .imageItem {
+.imageItem {
     height: 500px;
     width: 400px;
-  }
+}
 
-  .recipes {
+.recipes {
     margin-left: auto;
     margin-right: auto;
-  }
+}
 
 .btn {
-    background-color: #768AA5 !important ;
+    background-color: #768AA5 !important;
+}
+
+.petContainer {
+    width: 200px;
+    height: 120px;
+}
+
+.petImage {
+    width: 100%;
+    height: auto;
 }
