--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
 
 .link {
     font-weight: 500;
-    color: black;
+    color: white;
 }
 
 
@@ -46,4 +46,8 @@
 .petImage {
     width: 100%;
     height: auto;
+}
+
+.socialsContainer {
+    padding-top: 350px;
 }
